@@ -7,6 +7,7 @@
 extern int PBI_MIO_enabled;
 
 int PBI_MIO_Initialise(int *argc, char *argv[]);
+void PBI_MIO_Exit(void);
 UBYTE PBI_MIO_D1GetByte(UWORD addr, int no_side_effects);
 void PBI_MIO_D1PutByte(UWORD addr, UBYTE byte);
 UBYTE PBI_MIO_D6GetByte(UWORD addr, int no_side_effects);
